objects/Pepper_Analytical_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Amount_as__c</fullName>
        <label>Amount as</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationID_as__c</fullName>
        <label>ApplicationID as</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date_Formula__c</fullName>
        <formula>Application_Date_as__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date_as__c</fullName>
        <label>Application Date as</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_State_as__c</fullName>
        <label>Borrower State as</label>
        <picklist>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_as__c</fullName>
        <label>Channel as</label>
        <picklist>
            <picklistValues>
                <fullName>Pepper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_Name__c</fullName>
        <formula>&apos;D-&apos;+CASE( MOD(  Application_Date_as__c - DATE(1900, 1, 7), 7), 0, &quot;Sun&quot;, 1, &quot;Mon&quot;, 2, &quot;Tue&quot;, 3,
&quot;Wed&quot;, 4, &quot;Thur&quot;, 5, &quot;Fri&quot;, 6, &quot;Sat&quot;,&quot;Error&quot;) +&apos;/W-&apos;+ TEXT(CEILING(((Application_Date_as__c - DATE(YEAR(Application_Date_as__c ), 1, 1) + 1) + 
MOD(DATE(YEAR(Application_Date_as__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_from_Date__c</fullName>
        <formula>DAY(Application_Date_as__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day from Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_class_name_as__c</fullName>
        <label>Product class name as</label>
        <picklist>
            <picklistValues>
                <fullName>Near Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repdef__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repdef</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportDefault__c</fullName>
        <defaultValue>1</defaultValue>
        <label>ReportDefault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting New Settlement Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved Awaiting Outstanding Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approval with Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Documents Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Documents Received - Post Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Documents Received - Pre Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparation of Solicitor Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor Instructions Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_as__c</fullName>
        <label>Status as</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved in Principle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Documents Issued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mortgage Analytical Snapshot</label>
    <nameField>
        <displayFormat>Snap-{000000}</displayFormat>
        <label>Pepper Analytical Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Analytical Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>